# tade

./: .gitignore  CODE_STYLE.md  CONFIG.md  DEPLOY.md  MANIFEST.in  README.md  index.html  manage.py  setup.cfg  setup.py
css/: main.css
tade/: __init__.py  admin.py  apps.py  asgi.py  auth.py  feeds.py  forms.py  jobs.py  models.py  moderation.py  notifications.py  search.py  settings.py  settings_local.py.sample  urls.py  voting.py  webmention.py  wsgi.py
tade/local/: secret_settings.py
tade/mail/: __init__.py
tade/migrations/: 0001_initial.py  0002_auto_20210701_0937.py  0003_auto_20210701_1320.py  0004_story_active.py  0005_story_user.py  0006_auto_20210701_1445.py  0007_user_usename.py  0008_auto_20210701_1449.py  0009_auto_20210701_2044.py  0010_auto_20210702_0521.py  0011_auto_20210702_0629.py  0012_auto_20210702_0630.py  0013_auto_20210702_0829.py  0014_auto_20210702_0856.py  0015_auto_20210702_1109.py  0016_story_user_is_author.py  0017_tag_hex_color.py  0018_alter_tag_hex_color.py  0019_auto_20210704_1055.py  0020_auto_20210704_1209.py  0021_alter_invitation_receiver.py  0022_tag_parents.py  0023_tag_created.py  0024_auto_20210706_1647.py  0025_hat_user.py  0026_auto_20210706_2207.py  0027_auto_20210707_0810.py  0028_story_publish_date.py  0029_auto_20210708_0959.py  0030_auto_20210708_1004.py  0031_auto_20210708_1222_squashed_0033_taggregation_description.py  0032_auto_20210709_1729.py  0033_auto_20210709_1959.py  0034_user_avatar_title.py  0035_auto_20210711_1812.py  0036_auto_20210711_1828.py  0038_auto_20210713_1216.py  (+48 more)
tools/: mailing_list_rcv.py
(+20 files in other folders)
