[metadata]
name = tade
version = 0.1
description = discussion/forum/link aggregator
long_description = file: README.md
url = https://github.com/epilys/tade
author = Manos Pitsidianakis
author_email = epilys@nessuent.xyz
license = AGPL-3.0
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django>=3.2,<3.3
    Wand>=0.6.6,<0.7
    linkify-it-py==1.0
    markdown-it-py==1.1.0
    markdown-it-py[linkify]==1.1.0
    matplotlib==3.3.4


[options.extras_require]
graphviz = pygraphviz==1.7
igraph = python-igraph==0.9.6
pdfminer.siz = pdfminer.six==20200726
